--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@nextui-org/react": "^2.4.2",
     "axios": "^1.7.2",
+    "mdb-react-ui-kit": "^8.0.0",
     "next": "^14.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
