--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-client",
+  "name": "mocksparrow",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@nextui-org/react": "^2.4.2",
-    "axios": "^1.7.2",
-    "mdb-react-ui-kit": "^8.0.0",
-    "next": "^14.2.4",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1",
-    "styled-components": "^6.1.11"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
